# novel-writer

./: .env.example  .gitignore  README.md  pyproject.toml
novels/仙侠奇缘/: outline.md  roles.md  style.md
novels/仙侠奇缘/.novel/chroma_db/: chroma.sqlite3
novels/仙侠奇缘/.novel/novel_9a664a40a273/: novel.json
novels/奥术解析者/: outline.md  roles.md  style.md
novels/奥术解析者/.novel/chroma_db/: chroma.sqlite3
novels/奥术解析者/.novel/novel_cc02deb0968b/: foreshadowing.json  novel.json  timeline.json
novels/奥术解析者/.novel/novel_cc02deb0968b/chapters/: chapter_001.json  chapter_002.json  chapter_003.json  chapter_004.json  chapter_005.json  chapter_006.json
novels/奥术解析者/chapters/: 001.md  002.md  003.md  004.md  005.md  006.md
novels/奥术解析者/chapters/chapter_001/.trace/: 001_director.json  001_director_context.json  002_director.json  002_plotter.json  003_context.json  003_plotter_context.json  004_plotter.json  004_writer_draft.md  005_context.json  005_reviewer_1.json  006_writer_revise_context_1.json  006_writer_start_context.json  007_writer_draft.md  007_writer_rev1.md  007_writer_v1.md  008_reviewer_2.json  008_reviewer_context_1.json  009_reviewer_1.json  009_reviewer_v1_r1.json  (+46 more)
src/novel_writer/: __init__.py  cli.py  config.py  llm.py  logging_config.py  models.py  project.py  trace_store.py
src/novel_writer/agents/: __init__.py  archivist.py  base.py  director.py  plotter.py  reviewer.py  writer.py
src/novel_writer/memory/: __init__.py  context_builder.py  structured_store.py  vector_store.py
src/novel_writer/workflow/: __init__.py  graph.py  runner.py
(+55 files in other folders)
